[R-14][In-Progress] add filter reset button and capability

--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -335,8 +335,8 @@
                <property name="date">
                 <date>
                  <year>2000</year>
-                 <month>1</month>
-                 <day>1</day>
+                 <month>9</month>
+                 <day>14</day>
                 </date>
                </property>
                <property name="maximumDateTime">
@@ -349,8 +349,18 @@
                  <day>31</day>
                 </datetime>
                </property>
+               <property name="minimumDateTime">
+                <datetime>
+                 <hour>0</hour>
+                 <minute>0</minute>
+                 <second>0</second>
+                 <year>2000</year>
+                 <month>1</month>
+                 <day>1</day>
+                </datetime>
+               </property>
                <property name="currentSection">
-                <enum>QDateTimeEdit::SecondSection</enum>
+                <enum>QDateTimeEdit::DaySection</enum>
                </property>
                <property name="displayFormat">
                 <string>dd.MM.yyyy HH:mm:ss:zzz</string>
@@ -386,7 +396,7 @@
                 </time>
                </property>
                <property name="currentSection">
-                <enum>QDateTimeEdit::SecondSection</enum>
+                <enum>QDateTimeEdit::DaySection</enum>
                </property>
                <property name="displayFormat">
                 <string>dd.MM.yyyy HH:mm:ss:zzz</string>
@@ -638,6 +648,13 @@
               </size>
              </property>
             </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="resetButton">
+             <property name="text">
+              <string>Reset</string>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QPushButton" name="applyButton">
