[R-14][In-Progress] add helpmessage on clicked helpbutton

--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -664,7 +664,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton_3">
+            <widget class="QPushButton" name="helpButton">
              <property name="text">
               <string>Help</string>
              </property>
