[R-07 + R-10][In-Progress] add min, max, median and change tick labels

--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -54,24 +54,10 @@
            <layout class="QHBoxLayout" name="horizontalLayout_7">
             <item>
              <layout class="QGridLayout" name="gridLayout_4">
-              <item row="1" column="5">
-               <widget class="QLabel" name="label_info">
+              <item row="0" column="4">
+               <widget class="QLabel" name="label_8">
                 <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>ACK</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="2">
-               <widget class="QLabel" name="label_6">
-                <property name="text">
-                 <string>CRITICAL</string>
+                 <string>WARNING</string>
                 </property>
                </widget>
               </item>
@@ -82,8 +68,43 @@
                 </property>
                </widget>
               </item>
+              <item row="0" column="6">
+               <widget class="QLabel" name="label_10">
+                <property name="text">
+                 <string>DEBUG</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="5">
+               <widget class="QLabel" name="label_info">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="7">
+               <widget class="QLabel" name="label_12">
+                <property name="text">
+                 <string>Min</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_total">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
               <item row="1" column="4">
                <widget class="QLabel" name="label_warning">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="2">
+               <widget class="QLabel" name="label_critical">
                 <property name="text">
                  <string>0</string>
                 </property>
@@ -96,10 +117,17 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="4">
-               <widget class="QLabel" name="label_8">
+              <item row="1" column="8">
+               <widget class="QLabel" name="label_max">
                 <property name="text">
-                 <string>WARNING</string>
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="7">
+               <widget class="QLabel" name="label_min">
+                <property name="text">
+                 <string>0</string>
                 </property>
                </widget>
               </item>
@@ -110,17 +138,31 @@
                 </property>
                </widget>
               </item>
+              <item row="0" column="2">
+               <widget class="QLabel" name="label_6">
+                <property name="text">
+                 <string>CRITICAL</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="6">
+               <widget class="QLabel" name="label_debug">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>ACK</string>
+                </property>
+               </widget>
+              </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label">
                 <property name="text">
                  <string>Total</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_total">
-                <property name="text">
-                 <string>0</string>
                 </property>
                </widget>
               </item>
@@ -131,22 +173,22 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="2">
-               <widget class="QLabel" name="label_critical">
+              <item row="0" column="8">
+               <widget class="QLabel" name="label_13">
                 <property name="text">
-                 <string>0</string>
+                 <string>Max</string>
                 </property>
                </widget>
               </item>
-              <item row="0" column="6">
-               <widget class="QLabel" name="label_10">
+              <item row="0" column="9">
+               <widget class="QLabel" name="label_15">
                 <property name="text">
-                 <string>DEBUG</string>
+                 <string>Median</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="6">
-               <widget class="QLabel" name="label_debug">
+              <item row="1" column="9">
+               <widget class="QLabel" name="label_median">
                 <property name="text">
                  <string>0</string>
                 </property>
