--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1042</width>
-    <height>830</height>
+    <height>905</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -599,6 +599,55 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QGroupBox" name="log_filter_group">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="title">
+           <string>Log Level Filter</string>
+          </property>
+          <layout class="QFormLayout" name="formLayout_4">
+           <item row="0" column="0">
+            <widget class="QLabel" name="loglevel_filter_label">
+             <property name="text">
+              <string>LogLevel</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QComboBox" name="loglevel_filter_combo">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="currentText">
+              <string>ERROR</string>
+             </property>
+             <item>
+              <property name="text">
+               <string>ERROR</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>WARNING</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>INFO</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>DEBUG</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="view_tab">
@@ -978,7 +1027,6 @@
      <string>General</string>
     </property>
     <addaction name="actionPreferences"/>
-    <addaction name="actionLogAnalyser"/>
     <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuConnection">
