--- a/src/dialog_log_analyzer.ui
+++ b/src/dialog_log_analyzer.ui
@@ -54,85 +54,29 @@
            <layout class="QHBoxLayout" name="horizontalLayout_7">
             <item>
              <layout class="QGridLayout" name="gridLayout_4">
-              <item row="0" column="4">
-               <widget class="QLabel" name="label_8">
+              <item row="0" column="1">
+               <widget class="QLabel" name="label_5">
                 <property name="text">
-                 <string>WARNING</string>
+                 <string>ACK</string>
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
-               <widget class="QLabel" name="label_7">
+              <item row="0" column="5">
+               <widget class="QLabel" name="label_9">
                 <property name="text">
-                 <string>ERROR</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="6">
-               <widget class="QLabel" name="label_10">
-                <property name="text">
-                 <string>DEBUG</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="5">
-               <widget class="QLabel" name="label_info">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="7">
-               <widget class="QLabel" name="label_12">
-                <property name="text">
-                 <string>Min</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_total">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="4">
-               <widget class="QLabel" name="label_warning">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="2">
-               <widget class="QLabel" name="label_critical">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QLabel" name="label_ack">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="8">
-               <widget class="QLabel" name="label_max">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="7">
-               <widget class="QLabel" name="label_min">
-                <property name="text">
-                 <string>0</string>
+                 <string>INFO</string>
                 </property>
                </widget>
               </item>
               <item row="1" column="3">
                <widget class="QLabel" name="label_error">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="5">
+               <widget class="QLabel" name="label_info">
                 <property name="text">
                  <string>0</string>
                 </property>
@@ -145,17 +89,38 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="6">
-               <widget class="QLabel" name="label_debug">
+              <item row="1" column="2">
+               <widget class="QLabel" name="label_critical">
                 <property name="text">
                  <string>0</string>
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
-               <widget class="QLabel" name="label_5">
+              <item row="0" column="3">
+               <widget class="QLabel" name="label_7">
                 <property name="text">
-                 <string>ACK</string>
+                 <string>ERROR</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="7">
+               <widget class="QLabel" name="label_12">
+                <property name="text">
+                 <string>Min</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="10">
+               <widget class="QLabel" name="label_15">
+                <property name="text">
+                 <string>Median</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="4">
+               <widget class="QLabel" name="label_8">
+                <property name="text">
+                 <string>WARNING</string>
                 </property>
                </widget>
               </item>
@@ -166,10 +131,10 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="5">
-               <widget class="QLabel" name="label_9">
+              <item row="1" column="6">
+               <widget class="QLabel" name="label_debug">
                 <property name="text">
-                 <string>INFO</string>
+                 <string>0</string>
                 </property>
                </widget>
               </item>
@@ -180,15 +145,70 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="9">
-               <widget class="QLabel" name="label_15">
+              <item row="1" column="7">
+               <widget class="QLabel" name="label_min">
                 <property name="text">
-                 <string>Median</string>
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_total">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="6">
+               <widget class="QLabel" name="label_10">
+                <property name="text">
+                 <string>DEBUG</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="4">
+               <widget class="QLabel" name="label_warning">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="10">
+               <widget class="QLabel" name="label_median">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="8">
+               <widget class="QLabel" name="label_max">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLabel" name="label_ack">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="9">
+               <widget class="QLabel" name="label_14">
+                <property name="text">
+                 <string>Mean</string>
                 </property>
                </widget>
               </item>
               <item row="1" column="9">
-               <widget class="QLabel" name="label_median">
+               <widget class="QLabel" name="label_mean">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="text">
                  <string>0</string>
                 </property>
