[F-05] loglevel Filter des MainWindow werden vom LogAnalyzer übernommen

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -621,7 +621,7 @@
               <bool>true</bool>
              </property>
              <property name="currentText">
-              <string>ERROR</string>
+              <string>DEBUG</string>
              </property>
              <item>
               <property name="text">
